fruits.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: fruits
  name: fruits
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fruits
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: fruits
    spec:
	  volumes:
      - name: painter
        hostPath:
          path: /tmp/fruits
      containers:
      - image: sajid1994/centos-tomcat
        name: centos-tomcat
		volumeMounts:
        - mountPath: /opt/tomcat/webapps/fruits
          name: fruits
        ports:
        - containerPort: 8080
        resources: {}
status: {}
