tomcat-ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: tomcat-ingress-res
spec:
  ingressClassName: nginx
  rules:
  - host: a499773a9ebc749f98b99770dccac25f-120819814.ap-south-1.elb.amazonaws.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: main-test
            port:
              number: 8080
      - path: /painter
        pathType: Prefix
        backend:
          service:
            name: painter
            port:
              number: 8080
	  - path: /space
        pathType: Prefix
        backend:
          service:
            name: space
            port:
              number: 8080
      - path: /fruits
        pathType: Prefix
        backend:
          service:
            name: fruits
            port:
              number: 8080
